More work on getting to end to end agent testing
